# 2dgamengine

./: .clangd  .gitignore  CMakeLists.txt  README.md  run.bat
.zed/: debug.json  tasks.json
animations/: animation.cpp
collisions/: collider.cpp  collider.hpp
entities/: camera.cpp  camera.hpp  enemy.cpp  enemy.hpp  player.hpp  sprite.cpp  sprite.hpp
game/: game.cpp
include/: animation.hpp  collider.hpp  enemy.hpp  game.h  game.hpp  input.hpp  menu_scene.hpp  renderer.hpp  sprite.hpp
inputs/: input.hpp
renderer/: renderer.cpp
scenes/: level_one.cpp  level_one.hpp  menu_scene.cpp  menu_scene.hpp  scene.cpp  scene.hpp  scene_manager.hpp
src/: animation.cpp  collider.cpp  enemy.cpp  game.cpp  main.cpp  menu_scene.cpp  player.cpp  renderer.cpp  sprite.cpp  window.cpp
ui/: background.cpp  background.hpp  button.cpp  button.hpp
window/: window.hpp
